[package]
name = "tunnelto_server"
description = "expose your local web server to the internet with a public url"
version = "0.2.0"
authors = ["Alex Grinman <alex@tunnelto.dev>", "Rémi Kalbe <remi.kalbe@pm.me>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/expertify/tunnelto"
readme = "../README.md"

[[bin]]
name = "tunnelto_server"
path = "src/main.rs"

[dependencies]
tunnelto_lib = { path = "../tunnelto_lib" }
warp = "0.3"
tokio = { version = "1.28.0", features = ["full"] }
base64 = "0.11.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
chrono = "0.4.11"
pretty_env_logger = "0.4.0"
httparse = "1.3.4"
url = "2.1.1"
thiserror = "1.0"
uuid = {version = "0.8.1", features = ["serde", "v4"] }
sha2 = "0.9.0"
dashmap = "4.0.2"
reqwest = { version = "0.11.17", features = ["json"] }
trust-dns-resolver = "0.20"
hmac-sha256 = "0.1.7"
hex = "0.4.3"
rand = "0.7.3"
async-trait = "0.1.50"

tracing = "0.1.25"
tracing-subscriber = "0.2.17"
tracing-honeycomb = { git = "https://github.com/agrinman/tracing-honeycomb", rev = "687bafa722ccd584f45aa470fbb637bc57c999cd" }

# auth handler
rusoto_core = "0.46"
rusoto_dynamodb = "0.46"
rusoto_credential = "0.46"